# smart-resume

./: .env.example  .gitignore  Cargo.toml  README  docker-compose.yml  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
api/: summarize.rs
prisma/: schema.prisma
prisma/migrations/20250805072638_add_resume_model/: migration.sql
rust-service/: Cargo.toml  Dockerfile  openapi.yaml  rust-toolchain.toml  template.tex
rust-service/src/: handlers.rs  main.rs
rust-service/src/services/: export_pdf.rs  mod.rs  summarize.rs
scripts/: test_export_pdf.sh
src/: env.js
src-rs/: config.rs  error.rs  handlers.rs  lib.rs  models.rs
src-rs/services/: summarize.rs
src/app/: layout.tsx  page.tsx
src/app/api/auth/[...nextauth]/: route.ts
src/app/api/trpc/[trpc]/: route.ts
src/app/github/: page.tsx
src/app/resumes/: page.tsx
src/server/: db.ts
src/server/api/: root.ts  trpc.ts
src/server/api/routers/: github.ts  resume.ts
src/server/api/utils/: latex.ts  s3.ts
src/server/auth/: config.ts
src/trpc/: react.tsx  server.ts
