[package]
name = "rust-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
async-openai = "0.28.3"
dotenvy = "0.15"
tectonic = "0.13.0"
aws-config = "1.1.7"
aws-sdk-s3 = "1.17.0"
anyhow = "1.0"
mime = "0.3"
chrono = { version = "0.4", features = ["serde"] }
